# pyfe

./: .gitignore  README.md  environment.yml  errors_extractionproblems<function uuid1 at 0x7f4b75f591b0>.txt  pyproject.toml
CONF/002/: feconf.json
CONF/TSE/: feconf.json
pyfe_eros_montin/: ex.py  pyfe.py  pyml.py  pymodels.py  utils.py
tests/: test_pyfe.py
tests/data/: c.txt  data.json  data2d.json
