[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pyfe_eros_montin"
version = "0.0.2"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "pyfe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#dependencies=[,"scikit-learn","pandas","numpy"]
[project.urls]
"Homepage" = "https://github.com/erosmontin/pyfe"
"Bug Tracker" = "https://github.com/erosmontin/pyfe/issues"
