[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "pyfe_eros_montin"
version = "0.1.5.2"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "pyfe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["scikit-learn","pandas","numpy", "pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","scipy","toml","benford_py","trimesh","pyable_eros_montin @ git+https://github.com/erosmontin/pyable.git","pydaug_eros_montin @ git+https://github.com/erosmontin/pydaug.git"]

[project.urls]
"Homepage" = "https://github.com/erosmontin/pyfe"
"Bug Tracker" = "https://github.com/erosmontin/pyfe/issues"

